--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,11 +6,11 @@
 #    By: wdegraf <wdegraf@student.42heilbronn.de    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/11/07 18:09:33 by wdegraf           #+#    #+#              #
-#    Updated: 2024/11/07 21:00:07 by wdegraf          ###   ########.fr        #
+#    Updated: 2024/11/09 11:34:41 by wdegraf          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME := phonebook
+NAME := zombie
 
 SRC := $(wildcard *.cpp)
 HEADS := $(wildcard *.hpp)
